examples/errors/parsing/spec_take_annotated-trailing-semi.cn
fun incP : Int -> Pred Int [spec] = {
  n -> return (n + 1)
}

fun f : Int -> Pred Int [spec] = {
  n ->
  take x : Int = incP n;
}

main : () [impure] = ()
